# ARTIQ-alkaline

./: .gitignore  LICENSE  README.md  cuda  dataset_db.mdb-lock  device_db.py  enable-git-hooks.sh  example-uv2nix.nix  fix-hashes.sh  flake.nix  imports.py  nixGL-example.nix  pyproject.toml  pyrightconfig.json  setup.sh  test_cpu_mode.py  torch.py  uv.lock.bak.1757345674  working.nix
.dev-bin/: artiq_client  artiq_controller  artiq_dashboard  artiq_master  artiq_rpctool  artiq_run
.githooks/: pre-commit
artiq_kasli/transportable/software/: Makefile
artiq_kasli/transportable/software/bootloader/: Makefile
artiq_kasli/transportable/software/ksupport/: Makefile
artiq_kasli/transportable/software/libm/: Makefile
artiq_kasli/transportable/software/libprintf/: Makefile
artiq_kasli/transportable/software/libunwind/: Makefile
artiq_kasli/transportable/software/runtime/: Makefile
crate_config/: transportable.json
device_db/: transportable.py
package-checks/: imports.py  plot.py  sklearn_version.py
repositor/: core.py
repository/: clock_transition.py  core_test.py  dummy_nn.py  enhanced_nn.py
repository/Modules testing/: ndscan.py
repository/Shift Evaluation/: quad_zeeman_shift.py
repository/experiments/: Clock_Transition_v3.py
repository/modules_testing/: CoreTest.py
repository/testbed/: clock_transition_scan.py  sequence_main.py
scripts/: cuda.cu  imports.py  smoke.py  test_cuda.py
